--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
     <title>Typing Game</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="timer" id="timer">0</div>
     <div class="container">
       <div class="type-display" id="typeDisplay">type</div>
-      <textarea class="type-input" id="typeInput">type</textarea>
+      <textarea id="typeInput" class="type-input" autofocus>type</textarea>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
