--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="timer" id="timer">0</div>
     <div class="container">
       <div class="type-display" id="typeDisplay">type</div>
-      <textarea id="typeInput" class="type-input" autofocus>type</textarea>
+      <textarea id="typeInput" class="type-input" autofocus></textarea>
     </div>
 
     <script src="script.js"></script>
